--- a/Deep_Neural_Network.ipynb
+++ b/Deep_Neural_Network.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Deep_Neural_Network.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM79Chhf/9AOx7UL2B/gfOs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -247,7 +246,7 @@
       "metadata": {
         "id": "UOaNoWGdv-jP"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -339,12 +338,12 @@
       "metadata": {
         "id": "ob6DalHRwP4N"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "4vyK6aDXXigR"
       },
@@ -411,7 +410,7 @@
       "metadata": {
         "id": "UWhTGd2cYcg7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +438,7 @@
         "id": "VC5D72cwZjre",
         "outputId": "cb7b8b7b-6483-475e-c282-5294f2156883"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +489,7 @@
       "metadata": {
         "id": "fwQruYcJZ2xZ"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -509,7 +508,7 @@
         "id": "_dIclYciaA8b",
         "outputId": "1e1384ca-802c-4c65-96e8-d0059a2047c3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,7 +572,7 @@
       "metadata": {
         "id": "JB3yWqcgcRbH"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -591,7 +590,7 @@
         "id": "0-ur58occnWO",
         "outputId": "ef42108e-9057-4d52-a5e5-a841e3f3b500"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +644,7 @@
       "metadata": {
         "id": "4aNL75BUxOyA"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -666,7 +665,7 @@
         "id": "tok8rub6xUtD",
         "outputId": "a10fc8f1-6fd4-4122-ec98-6925d434cdc9"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,7 +721,7 @@
       "metadata": {
         "id": "GE9FNGryxflK"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -740,7 +739,7 @@
         "id": "PodUAFU-xook",
         "outputId": "c5d327df-6df5-4e5b-ee10-a8b8f595812d"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,7 +793,7 @@
       "metadata": {
         "id": "dKv82gFNxvqt"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -811,7 +810,7 @@
         "id": "hwS8OKXjx2Uv",
         "outputId": "a407f336-247a-4ed7-a0f6-3bb45bacffe4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -870,7 +869,7 @@
       "metadata": {
         "id": "yjL12Xz2yAIY"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -891,7 +890,7 @@
         "id": "S0fD23afyOP4",
         "outputId": "6ded5170-e10a-43ec-be5a-1e3b3b6df623"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -950,7 +949,7 @@
       "metadata": {
         "id": "mapKLmuLyYKx"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -977,7 +976,7 @@
         "id": "vqBXI2DtydHs",
         "outputId": "1dc1b554-a922-48b1-82f6-a96ed8aa58c6"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1064,7 +1063,7 @@
       "metadata": {
         "id": "37jT5zEIyk5K"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1081,7 +1080,7 @@
         "id": "SfQrdl03yw3H",
         "outputId": "e95aafdd-441f-4162-bab5-e6a2f5fda1a5"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1141,7 +1140,7 @@
       "metadata": {
         "id": "kD7ETrOOy3RW"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1153,7 +1152,8 @@
         "print (\"W1 = \"+ str(parameters[\"W1\"]))\n",
         "print (\"b1 = \"+ str(parameters[\"b1\"]))\n",
         "print (\"W2 = \"+ str(parameters[\"W2\"]))\n",
-        "print (\"b2 = \"+ str(parameters[\"b2\"]))"
+        "print (\"b2 = \"+ str(parameters[\"b2\"]))\n",
+        "#edit"
       ],
       "metadata": {
         "colab": {
@@ -1162,7 +1162,7 @@
         "id": "OUI2O-BTzCRL",
         "outputId": "7cd705de-e5dd-4dd1-90fb-4a2b80a35e3f"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
